--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   <a
                     class="closeSideNav button"
                     target="_blank"
-                    href="https://docs.google.com/document/d/1BRwjRcREtMrxPsMFiyLbyQjcC0BAJujBDf-nhfM_Vfw/edit?usp=sharing"
+                    href="https://drive.google.com/file/d/117VFarfDWrdB8iavlfVDIUgTUVagFQdE/view"
                     >Resume</a
                   >
                 </li>
@@ -72,7 +72,7 @@
                 <a
                   class="button resume"
                   target="_blank"
-                  href="https://docs.google.com/document/d/1BRwjRcREtMrxPsMFiyLbyQjcC0BAJujBDf-nhfM_Vfw/edit?usp=sharing"
+                  href="https://drive.google.com/file/d/117VFarfDWrdB8iavlfVDIUgTUVagFQdE/view"
                   >Resume</a
                 >
               </li>
