--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   <a
                     class="closeSideNav button"
                     target="_blank"
-                    href="https://drive.google.com/file/d/117VFarfDWrdB8iavlfVDIUgTUVagFQdE/view"
+                    href="https://drive.google.com/file/d/1dNLQJw1hmVC_gM19rzKFyKzT4a7GT74X/view?usp=sharing"
                     >Resume</a
                   >
                 </li>
@@ -72,7 +72,7 @@
                 <a
                   class="button resume"
                   target="_blank"
-                  href="https://drive.google.com/file/d/117VFarfDWrdB8iavlfVDIUgTUVagFQdE/view"
+                  href="https://drive.google.com/file/d/1dNLQJw1hmVC_gM19rzKFyKzT4a7GT74X/view?usp=sharing"
                   >Resume</a
                 >
               </li>
@@ -232,7 +232,7 @@
           data-aos-offset="300"
           class="medium fw-600 text-left"
         >
-          Portfolio
+          Report
         </p>
         <div
           data-aos="fade-right"
