changed icons to names

--- a/index.html
+++ b/index.html
@@ -164,52 +164,44 @@
           </div>
           <div data-aos-offset="300" data-aos="fade-left" class="content px">
             <p class="small grey text-left">
-              I am a web devloper who wants to explore every tech stack.I am
-              passionate about building scalable stuff , creating effective
-              solutions, and learning every day to grow professionally in the IT
-              field.
+              I am a self-taught,full-stack web devloper who wants to explore
+              every tech stack.I am passionate about building scalable stuff ,
+              creating effective solutions, and learning every day to grow
+              professionally in the IT field.
             </p>
             <p class="small grey text-left my-1">
               Here are a few technologies I've been working with recently ,
             </p>
-            <p class="small grey text-left my-1">
-              Proficient :
-            </p>
-            <ul class="proficient grid-6-about">
-              <li>
-                <img src="html.png" alt="" />
-              </li>
-              <li>
-                <img src="css3 (1).png" alt="" />
-              </li>
-              <li>
-                <img src="material.png" alt="" />
-              </li>
-              <li>
-                <img src="js2.png" alt="" />
-              </li>
-              <li>
-                <img src="reactjs.png" alt="" />
-              </li>
-              <li>
-                <i class="fab fa-github large"></i>
-              </li>
-            </ul>
-            <p class="small grey text-left my">
-              Familiar :
-            </p>
-            <ul class="familiar grid-6-about">
-              <li>
-                <img src="sass.png" alt="" />
-              </li>
 
-              <li>
-                <img src="node.png" alt="" />
-              </li>
-              <li>
-                <img src="mongoose.png" alt="" />
-              </li>
-            </ul>
+            <div class="skills">
+              <ul class="languages grid-6-about">
+                <p class="small grey text-left my-1">
+                  Languages & <br />
+                  Frameworks:
+                </p>
+                <li><i class="fas fa-angle-right"></i> HTML</li>
+                <li><i class="fas fa-angle-right"></i> CSS</li>
+                <li><i class="fas fa-angle-right"></i> Materialize CSS</li>
+                <li><i class="fas fa-angle-right"></i> Javascript(ES6)</li>
+                <li><i class="fas fa-angle-right"></i> MongoDB</li>
+                <li><i class="fas fa-angle-right"></i> Expressjs</li>
+                <li><i class="fas fa-angle-right"></i> Reactjs(Redux/Hooks)</li>
+                <li><i class="fas fa-angle-right"></i> Nodejs</li>
+              </ul>
+              <ul class="tools grid-6-about">
+                <p class="small grey my-1 text-left">
+                  Tools & <br />
+                  Platforms:
+                </p>
+                <li><i class="fas fa-angle-right"></i> Git</li>
+                <li><i class="fas fa-angle-right"></i> Postman</li>
+                <li><i class="fas fa-angle-right"></i> Mongoose</li>
+                <li><i class="fas fa-angle-right"></i> Webpack</li>
+                <li><i class="fas fa-angle-right"></i> Babel</li>
+                <li><i class="fas fa-angle-right"></i> Netlify</li>
+                <li><i class="fas fa-angle-right"></i> Heroku</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
