--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   <a
                     class="closeSideNav button"
                     target="_blank"
-                    href="https://drive.google.com/file/d/1dNLQJw1hmVC_gM19rzKFyKzT4a7GT74X/view?usp=sharing"
+                    href="https://drive.google.com/file/d/1zLTiogL_Ij5YeX8-EatXG6_6MbaPRMFm/view?usp=sharing"
                     >Resume</a
                   >
                 </li>
@@ -72,7 +72,7 @@
                 <a
                   class="button resume"
                   target="_blank"
-                  href="https://drive.google.com/file/d/1dNLQJw1hmVC_gM19rzKFyKzT4a7GT74X/view?usp=sharing"
+                  href="https://drive.google.com/file/d/1zLTiogL_Ij5YeX8-EatXG6_6MbaPRMFm/view?usp=sharing"
                   >Resume</a
                 >
               </li>
@@ -159,9 +159,12 @@
         </div>
         <div class="grid-2-about">
           <div data-aos-offset="300" data-aos="fade-right" class="gallery">
-            <div class="imgoverlay round-img"></div>
-            <img src="cut.jpg " class="round-img" alt="" />
+            <a target="_blank" href="https://github.com/devrinku">
+              <div class="imgoverlay round-img"></div>
+              <img src="cut.jpg " class="round-img" alt=""
+            /></a>
           </div>
+
           <div data-aos-offset="300" data-aos="fade-left" class="content px">
             <p class="small grey text-left">
               I am a self-taught,full-stack web devloper who wants to explore
@@ -286,18 +289,18 @@
             <div class="links">
               <a
                 target="_blank"
-                class="large"
+                class="button btn"
                 href="https://github.com/devrinku/portfolio"
               >
-                <i class="fab fa-github"></i
-              ></a>
+                Code</a
+              >
               <a
                 target="_blank"
-                class="medium"
+                class="button btn"
                 href="https://sleepy-chandrasekhar-4761ea.netlify.app/"
               >
-                <i class="fas fa-external-link-alt"></i
-              ></a>
+                Demo</a
+              >
             </div>
           </div>
           <div data-tilt data-tilt-max="5" class="project-img">
@@ -362,19 +365,19 @@
             </ul>
             <div class="links">
               <a
+                class="btn button"
                 target="_blank"
-                class="large"
                 href="https://github.com/devrinku/landingpage"
               >
-                <i class="fab fa-github"></i
-              ></a>
+                Code</a
+              >
               <a
+                class="btn button"
                 target="_blank"
-                class="medium"
                 href="https://pensive-swirles-5dd7b7.netlify.app/"
               >
-                <i class="fas fa-external-link-alt"></i
-              ></a>
+                Demo</a
+              >
             </div>
           </div>
           <div data-tilt data-tilt-max="5" class="project-img">
@@ -453,18 +456,17 @@
             <div class="links">
               <a
                 target="_blank"
-                class="large"
+                class="btn button"
                 href="https://github.com/devrinku/watchMan"
-              >
-                <i class="fab fa-github"></i
-              ></a>
+                >Code
+              </a>
               <a
                 target="_blank"
-                class="medium"
+                class="button btn"
                 href="https://mysterious-plains-16845.herokuapp.com/login"
               >
-                <i class="fas fa-external-link-alt"></i
-              ></a>
+                Demo</a
+              >
             </div>
           </div>
           <div data-tilt data-tilt-max="5" class="project-img">
