--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   <a
                     class="closeSideNav button"
                     target="_blank"
-                    href="https://drive.google.com/file/d/1zLTiogL_Ij5YeX8-EatXG6_6MbaPRMFm/view?usp=sharing"
+                    href="https://drive.google.com/file/d/1-eiyNUBIkhRFM7J5-WUFttU-gS9M3CwI/view"
                     >Resume</a
                   >
                 </li>
@@ -72,7 +72,7 @@
                 <a
                   class="button resume"
                   target="_blank"
-                  href="https://drive.google.com/file/d/1zLTiogL_Ij5YeX8-EatXG6_6MbaPRMFm/view?usp=sharing"
+                  href="https://drive.google.com/file/d/1-eiyNUBIkhRFM7J5-WUFttU-gS9M3CwI/view"
                   >Resume</a
                 >
               </li>
@@ -83,7 +83,7 @@
     </nav>
 
     <!---------------------------- Header--------------------->
-    <div style="margin-top: 50px;"></div>
+    <div style="margin-top: 50px"></div>
     <header>
       <div class="container">
         <div class="header down">
@@ -97,7 +97,7 @@
           <p
             data-aos="fade-zoom-in"
             data-aos-delay="2400"
-            style="color: rgb(215, 215, 241);"
+            style="color: rgb(215, 215, 241)"
             class="x-large info fw-600"
           >
             Rajesh Kumar
@@ -150,7 +150,7 @@
     <!-------------------About------------------------------>
     <section id="about" class="about">
       <div class="container">
-        <div style="margin-bottom: 80px;"></div>
+        <div style="margin-bottom: 80px"></div>
         <div class="heading my-2">
           <div class="text">
             <p class="large fw-600 grey">About me</p>
@@ -172,12 +172,13 @@
               creating effective solutions, and learning every day to grow
               professionally in the IT field.
             </p>
+
             <p class="small grey text-left my-1">
               Here are a few technologies I've been working with recently ,
             </p>
 
             <div class="skills">
-              <ul class="languages grid-6-about">
+              <ul>
                 <p class="small grey text-left my-1">
                   Languages & <br />
                   Frameworks:
@@ -191,7 +192,7 @@
                 <li><i class="fas fa-angle-right"></i> Reactjs(Redux/Hooks)</li>
                 <li><i class="fas fa-angle-right"></i> Nodejs</li>
               </ul>
-              <ul class="tools grid-6-about">
+              <ul>
                 <p class="small grey my-1 text-left">
                   Tools & <br />
                   Platforms:
@@ -199,8 +200,6 @@
                 <li><i class="fas fa-angle-right"></i> Git</li>
                 <li><i class="fas fa-angle-right"></i> Postman</li>
                 <li><i class="fas fa-angle-right"></i> Mongoose</li>
-                <li><i class="fas fa-angle-right"></i> Webpack</li>
-                <li><i class="fas fa-angle-right"></i> Babel</li>
                 <li><i class="fas fa-angle-right"></i> Netlify</li>
                 <li><i class="fas fa-angle-right"></i> Heroku</li>
               </ul>
@@ -209,14 +208,77 @@
         </div>
       </div>
     </section>
+    <!-----------------------------------My Achivements-------------------------->
     <section id="work" class="work my-2">
       <div class="container">
-        <div style="margin-bottom: 80px;"></div>
+        <div style="margin-bottom: 80px"></div>
         <div class="heading my-3">
           <div class="text">
-            <p class="large grey fw-600">
-              My work
-            </p>
+            <p class="large grey fw-600">Achivements</p>
+          </div>
+          <div class="h-holder">
+            <div class="line"></div>
+          </div>
+        </div>
+        <div class="achivements">
+          <div class="box">
+            <div class="mx alt">
+              <i style="font-size: 1.2rem" class="fas fa-angle-right"></i>
+            </div>
+            <div class="main">
+              <p class="small">
+                Contributed to an open source project
+                <a
+                  target="_blank"
+                  href="https://github.com/bradtraversy/devcamper-api"
+                >
+                  <i class="fas fa-external-link-alt"></i>
+                </a>
+              </p>
+            </div>
+          </div>
+          <div class="my box">
+            <div class="mx alt">
+              <i style="font-size: 1.2rem" class="fas fa-angle-right"></i>
+            </div>
+            <div class="main">
+              <p class="small">
+                Try to help other new developers on ​Udemy​ by answering their
+                questions in Q&A section of a particular lecture.
+              </p>
+            </div>
+          </div>
+          <div class="box">
+            <div class="mx alt">
+              <i style="font-size: 1.2rem" class="fas fa-angle-right"></i>
+            </div>
+            <div class="main">
+              <p class="small">
+                Cracked gate from mechanical branch in 2019 held by iit Madras.
+              </p>
+            </div>
+          </div>
+          <div class="my box">
+            <div class="mx alt">
+              <i style="font-size: 1.2rem" class="fas fa-angle-right"></i>
+            </div>
+            <div class="main">
+              <p class="small">
+                Cracked gate from mechanical branch in 2018 held by iit
+                Guwahati.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ----------------------------------My Work----------------------- -->
+    <section id="work" class="work my-2">
+      <div class="container">
+        <div style="margin-bottom: 80px"></div>
+        <div class="heading my-3">
+          <div class="text">
+            <p class="large grey fw-600">My work</p>
           </div>
           <div class="h-holder">
             <div class="line"></div>
@@ -245,39 +307,27 @@
             <ul class="my-2">
               <li>
                 <i class="fas fa-chevron-circle-right"></i>
-                <span class="small grey text-left my">
-                  HTML
-                </span>
+                <span class="small grey text-left my"> HTML </span>
               </li>
               <li>
                 <i class="fas fa-chevron-circle-right"></i>
-                <span class="small grey text-left my">
-                  CSS
-                </span>
+                <span class="small grey text-left my"> CSS </span>
               </li>
               <li>
                 <i class="fas fa-chevron-circle-right"></i>
-                <span class="small grey text-left my">
-                  Javascript
-                </span>
+                <span class="small grey text-left my"> Javascript </span>
               </li>
               <li>
                 <i class="fas fa-chevron-circle-right"></i>
-                <span class="small grey text-left my">
-                  Tilt.JS
-                </span>
+                <span class="small grey text-left my"> Tilt.JS </span>
               </li>
               <li>
                 <i class="fas fa-chevron-circle-right"></i>
-                <span class="small grey text-left my">
-                  SmoothScroll.Js
-                </span>
+                <span class="small grey text-left my"> SmoothScroll.Js </span>
               </li>
               <li>
                 <i class="fas fa-chevron-circle-right"></i>
-                <span class="small grey text-left my">
-                  Animate On Scroll
-                </span>
+                <span class="small grey text-left my"> Animate On Scroll </span>
               </li>
               <li>
                 <i class="fas fa-chevron-circle-right"></i>
@@ -312,6 +362,174 @@
           </div>
         </div>
         <p
+          data-aos="fade-right"
+          data-aos-offset="300"
+          class="medium fw-600 text-left"
+        >
+          GitTweet
+        </p>
+        <div
+          data-aos="fade-right"
+          data-aos-offset="400"
+          class="grid-2-work my-1"
+        >
+          <div class="project-data">
+            <p
+              data-aos="fade-right"
+              data-aos-offset="400"
+              class="small grey text-left"
+            >
+              A social network app combining Github API and custom GitTweet API
+            </p>
+            <ul class="my-1">
+              <li>
+                <i class="fas fa-chevron-circle-right"></i>
+                <span class="small grey text-left my">HTML , CSS </span>
+              </li>
+              <li>
+                <i class="fas fa-chevron-circle-right"></i>
+                <span class="small grey text-left my"> React with Redux </span>
+              </li>
+              <li>
+                <i class="fas fa-chevron-circle-right"></i>
+                <span class="small grey text-left my">
+                  Axios to make request.
+                </span>
+              </li>
+
+              <li>
+                <i class="fas fa-chevron-circle-right"></i>
+                <span class="small grey text-left my">
+                  React-Router for dynamic routing.
+                </span>
+              </li>
+              <li>
+                <i class="fas fa-chevron-circle-right"></i>
+                <span class="small grey text-left my">
+                  Moment for formatting dates.
+                </span>
+              </li>
+              <li>
+                <i class="fas fa-chevron-circle-right"></i>
+                <span class="small grey text-left my">
+                  React toastify to create alerts
+                </span>
+              </li>
+            </ul>
+            <div class="links">
+              <a
+                target="_blank"
+                class="btn button"
+                href="https://github.com/devrinku/gitTwitter"
+                >Code
+              </a>
+              <a
+                target="_blank"
+                class="button btn"
+                href="http://100.25.179.165"
+              >
+                Demo</a
+              >
+            </div>
+          </div>
+          <div data-tilt data-tilt-max="5" class="project-img">
+            <a
+              target="_blank"
+              href="https://mysterious-plains-16845.herokuapp.com/login"
+            >
+              <img src="gittweet.PNG" alt=""
+            /></a>
+          </div>
+        </div>
+        <p
+          data-aos="fade-right"
+          data-aos-offset="300"
+          class="medium fw-600 text-left"
+        >
+          GitTweet-API
+        </p>
+        <div
+          data-aos="fade-right"
+          data-aos-offset="400"
+          class="grid-2-work my-1"
+        >
+          <div class="project-data">
+            <p
+              data-aos="fade-right"
+              data-aos-offset="400"
+              class="small grey text-left"
+            >
+              Rest API for social network.
+            </p>
+            <ul class="my-1">
+              <li>
+                <i class="fas fa-chevron-circle-right"></i>
+                <span class="small grey text-left my"
+                  >Node and Express for Rest API</span
+                >
+              </li>
+              <li>
+                <i class="fas fa-chevron-circle-right"></i>
+                <span class="small grey text-left my"></span>
+              </li>
+              <li>
+                <i class="fas fa-chevron-circle-right"></i>
+                <span class="small grey text-left my">
+                  Bcrypt js for hashing passwords
+                </span>
+              </li>
+
+              <li>
+                <i class="fas fa-chevron-circle-right"></i>
+                <span class="small grey text-left my">
+                  Express-fileupload to upload profile images.
+                </span>
+              </li>
+              <li>
+                <i class="fas fa-chevron-circle-right"></i>
+                <span class="small grey text-left my">
+                  JSONWebTokens for authentication.
+                </span>
+              </li>
+              <li>
+                <i class="fas fa-chevron-circle-right"></i>
+                <span class="small grey text-left my">
+                  Nodemailer to send reset passwords links.
+                </span>
+              </li>
+              <li>
+                <i class="fas fa-chevron-circle-right"></i>
+                <span class="small grey text-left my">
+                  Deployed on Amazon Web Services
+                </span>
+              </li>
+            </ul>
+            <div class="links">
+              <a
+                target="_blank"
+                class="btn button"
+                href="https://github.com/devrinku/gitTwitter-API"
+                >Code
+              </a>
+              <a
+                target="_blank"
+                class="button btn"
+                href="https://documenter.getpostman.com/view/11930883/TVCcYVV2"
+              >
+                Demo</a
+              >
+            </div>
+          </div>
+          <div data-tilt data-tilt-max="5" class="project-img">
+            <a
+              target="_blank"
+              href="https://mysterious-plains-16845.herokuapp.com/login"
+            >
+              <img src="API.PNG" alt=""
+            /></a>
+          </div>
+        </div>
+        <p
           data-aos="fade-left"
           data-aos-offset="300"
           class="medium fw-600 text-left"
@@ -334,21 +552,15 @@
             <ul class="my-2">
               <li>
                 <i class="fas fa-chevron-circle-right"></i>
-                <span class="small grey text-left my">
-                  HTML
-                </span>
+                <span class="small grey text-left my"> HTML </span>
               </li>
               <li>
                 <i class="fas fa-chevron-circle-right"></i>
-                <span class="small grey text-left my">
-                  CSS
-                </span>
+                <span class="small grey text-left my"> CSS </span>
               </li>
               <li>
                 <i class="fas fa-chevron-circle-right"></i>
-                <span class="small grey text-left my">
-                  Materialize-CSS
-                </span>
+                <span class="small grey text-left my"> Materialize-CSS </span>
               </li>
               <li>
                 <i class="fas fa-chevron-circle-right"></i>
@@ -412,15 +624,11 @@
             <ul class="my-1">
               <li>
                 <i class="fas fa-chevron-circle-right"></i>
-                <span class="small grey text-left my">
-                  HTML/CSS
-                </span>
+                <span class="small grey text-left my"> HTML/CSS </span>
               </li>
               <li>
                 <i class="fas fa-chevron-circle-right"></i>
-                <span class="small grey text-left my">
-                  Materialize-CSS
-                </span>
+                <span class="small grey text-left my"> Materialize-CSS </span>
               </li>
               <li>
                 <i class="fas fa-chevron-circle-right"></i>
@@ -480,6 +688,8 @@
         </div>
       </div>
     </section>
+
+    <!---------------------------------- Footer-------------------------------- -->
     <footer id="contact">
       <div class="container footer">
         <div
@@ -539,9 +749,7 @@
               </li>
             </ul>
           </div>
-          <p class="small grey">
-            Code and Design by Rajesh
-          </p>
+          <p class="small grey">Code and Design by Rajesh</p>
         </div>
       </div>
     </footer>
