--- a/index.html
+++ b/index.html
@@ -316,7 +316,8 @@
               data-aos-offset="400"
               class="small grey text-left"
             >
-              A social network app combining Github API and custom GitTweet API
+              A social network app combining Github API and custom GitTwitter
+              API
             </p>
             <ul class="my-1">
               <li>
@@ -383,7 +384,7 @@
           data-aos-offset="300"
           class="medium fw-600 text-left"
         >
-          GitTweet-API
+          GitTwitter-API
         </p>
         <div
           data-aos="fade-right"
