image link fixed

--- a/index.html
+++ b/index.html
@@ -371,10 +371,7 @@
             </div>
           </div>
           <div data-tilt data-tilt-max="5" class="project-img">
-            <a
-              target="_blank"
-              href="https://mysterious-plains-16845.herokuapp.com/login"
-            >
+            <a target="_blank" href="http://100.25.179.165">
               <img src="gittweet.PNG" alt=""
             /></a>
           </div>
@@ -458,7 +455,7 @@
           <div data-tilt data-tilt-max="5" class="project-img">
             <a
               target="_blank"
-              href="https://mysterious-plains-16845.herokuapp.com/login"
+              href="https://documenter.getpostman.com/view/11930883/TVCcYVV2"
             >
               <img src="API.PNG" alt=""
             /></a>
