--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
     <!-- -----------------Aside----------------------------->
     <aside class="data-side" data-aos="fade-zoom-in" data-aos-delay="1200">
       <ul>
-        <li class="data-side" data-aos="fade-left" data-aos-delay="1400">
+        <!-- <li class="data-side" data-aos="fade-left" data-aos-delay="1400">
           <a target="_blank" href="https://www.facebook.com/rajesh.pardhan.3"
             ><i class="fab fa-facebook medium"></i
           ></a>
-        </li>
+        </li> -->
         <li class="data-side" data-aos="fade-left" data-aos-delay="1600">
-          <a target="_blank" href="https://github.com/devrinku"
+          <a target="_blank" href="https://github.com/rinku122"
             ><i class="fab fa-github medium"></i
           ></a>
         </li>
@@ -138,8 +138,8 @@
           ></a>
         </li>
         <li class="data-side" data-aos="fade-left" data-aos-delay="1900">
-          <a target="_blank" href="https://www.instagram.com/rinku1221995/"
-            ><i class="fab fa-instagram medium"></i
+          <a target="_blank" href="https://www.linkedin.com/in/rajesh-kumar-ab87211b6/"
+            ><i class="fab fa-linkedin medium"></i
           ></a>
         </li>
         <li class="v-holder data-side">
@@ -159,7 +159,7 @@
         </div>
         <div class="grid-2-about">
           <div data-aos-offset="300" data-aos="fade-right" class="gallery">
-            <a target="_blank" href="https://github.com/devrinku">
+            <a target="_blank" href="https://github.com/rinku122">
               <div class="imgoverlay round-img"></div>
               <img src="cut.jpg " class="round-img" alt=""
             /></a>
@@ -549,7 +549,7 @@
                 <a
                   class="btn button"
                   target="_blank"
-                  href="https://github.com/devrinku/landingpage"
+                  href="https://github.com/rinku122/landingpage"
                 >
                   Code</a
                 >
@@ -635,7 +635,7 @@
                 <a
                   target="_blank"
                   class="btn button"
-                  href="https://github.com/devrinku/watchMan"
+                  href="https://github.com/rinku122/watchMan"
                   >Code
                 </a>
                 <a
@@ -693,15 +693,15 @@
         >
           <div class="social-icons my-1">
             <ul>
-              <li>
+              <!-- <li>
                 <a
                   target="_blank"
                   href="https://www.facebook.com/rajesh.pardhan.3"
                   ><i class="fab fa-facebook grey large"></i
                 ></a>
-              </li>
+              </li> -->
               <li>
-                <a target="_blank" href="https://github.com/devrinku"
+                <a target="_blank" href="https://github.com/rinku122"
                   ><i class="fab grey fa-github large"></i
                 ></a>
               </li>
@@ -713,8 +713,8 @@
               <li>
                 <a
                   target="_blank"
-                  href="https://www.instagram.com/rinku1221995/"
-                  ><i class="fab grey fa-instagram large"></i
+                  href="https://www.linkedin.com/in/rajesh-kumar-ab87211b6/"
+                  ><i class="fab grey fa-linkedin large"></i
                 ></a>
               </li>
             </ul>
