--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
                 <li><i class="fas fa-angle-right"></i> Express JS</li>
                 <li><i class="fas fa-angle-right"></i> Reactjs(Redux/Hooks)</li>
                 <li><i class="fas fa-angle-right"></i> Node JS</li>
+                <li><i class="fas fa-angle-right"></i> Nest JS</li>
                 <li><i class="fas fa-angle-right"></i> RabbitMQ</li>
                 <li><i class="fas fa-angle-right"></i> gRPC </li>
               </ul>
