--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   <a
                     class="closeSideNav button"
                     target="_blank"
-                    href="https://drive.google.com/file/d/1tyxytKhItE2RlycXnp55M1g3p2Y3AsK9/view"
+                    href="https://drive.google.com/file/d/1Zr1XtSAXxgOZXVM8D-dQc8mZxW2MCp9n/view?usp=sharing"
                     >Resume</a
                   >
                 </li>
@@ -72,7 +72,7 @@
                 <a
                   class="button resume"
                   target="_blank"
-                  href="https://drive.google.com/file/d/1tyxytKhItE2RlycXnp55M1g3p2Y3AsK9/view"
+                  href="https://drive.google.com/file/d/1Zr1XtSAXxgOZXVM8D-dQc8mZxW2MCp9n/view?usp=sharing"
                   >Resume</a
                 >
               </li>
