addess edublock pro

--- a/index.html
+++ b/index.html
@@ -237,6 +237,64 @@
           data-aos-offset="300"
           class="medium fw-600 text-left"
         >
+          EduBlock Pro
+        </p>
+        <div
+          data-aos="fade-right"
+          data-aos-offset="300"
+          class="grid-2-work my-1"
+        >
+          <div class="project-data">
+            <p
+              data-aos="fade-right"
+              data-aos-offset="300"
+              class="small grey text-left my"
+            >
+              Made backend in Nestjs following Microservice architecture in a project that prevents leakage of question paper in competetive exams. 
+            </p>
+            <ul class="my-2">
+              <li>
+                <i class="fas fa-chevron-circle-right"></i>
+                <span class="small grey text-left my">
+                  Used RSA asymmetric encryption for securing data. 
+                </span>
+              </li>
+
+              <li>
+                <i class="fas fa-chevron-circle-right"></i>
+                <span class="small grey text-left my">
+                  Used Kafka for communication between microserveices.
+                </span>
+              </li>
+              <li>
+                <i class="fas fa-chevron-circle-right"></i>
+                <span class="small grey text-left my">
+                  Used Redis for caching.
+                </span>
+              </li>
+            </ul>
+            <div class="links">
+              <a
+                target="_blank"
+                class="button btn"
+                href="https://edublockpro.com/"
+              >
+                Demo</a
+              >
+            </div>
+          </div>
+          <div data-tilt data-tilt-max="5" class="project-img">
+            <a target="_blank" href="https://edublockpro.com/"
+              ><img src="EduBlock-Pro.png" alt=""
+            /></a>
+          </div>
+        </div>
+
+        <p
+          data-aos="fade-right"
+          data-aos-offset="300"
+          class="medium fw-600 text-left"
+        >
           Anchorswap
         </p>
         <div
@@ -274,7 +332,7 @@
                 </span>
               </li>
             </ul>
-            <div class="links">
+            <!-- <div class="links">
               <a
                 target="_blank"
                 class="button btn"
@@ -282,7 +340,7 @@
               >
                 Demo</a
               >
-            </div>
+            </div> -->
           </div>
           <div data-tilt data-tilt-max="5" class="project-img">
             <a target="_blank" href="https://anchorswap.app/"
@@ -339,7 +397,7 @@
                 </span>
               </li>
             </ul>
-            <div class="links">
+            <!-- <div class="links">
               <a
                 target="_blank"
                 class="button btn"
@@ -347,7 +405,7 @@
               >
                 Demo</a
               >
-            </div>
+            </div> -->
           </div>
           <div data-tilt data-tilt-max="5" class="project-img">
             <a target="_blank" href="https://inversev3.projectinverse.com/">
@@ -400,7 +458,7 @@
                 </span>
               </li>
             </ul>
-            <div class="links">
+            <!-- <div class="links">
               <a
                 target="_blank"
                 class="button btn"
@@ -415,7 +473,7 @@
               >
                 Demo</a
               >
-            </div>
+            </div> -->
           </div>
           <div data-tilt data-tilt-max="5" class="project-img">
             <a target="_blank" href="https://stage-v2.autocompound.com/"
@@ -480,7 +538,7 @@
                 </span>
               </li>
             </ul>
-            <div class="links">
+            <!-- <div class="links">
               <a
                 target="_blank"
                 class="button btn"
@@ -488,7 +546,7 @@
               >
                 Demo</a
               >
-            </div>
+            </div> -->
           </div>
           <div data-tilt data-tilt-max="5" class="project-img">
             <a
