addess edublock pro

--- a/index.html
+++ b/index.html
@@ -195,6 +195,51 @@
                 <li><i class="fas fa-angle-right"></i> Nest JS</li>
                 <li><i class="fas fa-angle-right"></i> RabbitMQ</li>
                 <li><i class="fas fa-angle-right"></i> gRPC </li>
+                <li><i class="fas fa-angle-right"></i> Solidity</li>
+                <li><i class="fas fa-angle-right"></i> Web3 JS/Ethers JS</li>
+                <li><i class="fas fa-angle-right"></i> Javascript</li>
+                <li><i class="fas fa-angle-right"></i> Typescript</li>
+                <li><i class="fas fa-angle-right"></i> MongoDB</li>
+                <li><i class="fas fa-angle-right"></i> Mongoose</li>
+                <li><i class="fas fa-angle-right"></i> Express JS</li>
+                <li><i class="fas fa-angle-right"></i> Reactjs(Redux/Hooks)</li>
+                <li><i class="fas fa-angle-right"></i> Node JS</li>
+                <li><i class="fas fa-angle-right"></i> Nest JS</li>
+                <li><i class="fas fa-angle-right"></i> RabbitMQ</li>
+                <li><i class="fas fa-angle-right"></i> gRPC </li> <li><i class="fas fa-angle-right"></i> Solidity</li>
+                <li><i class="fas fa-angle-right"></i> Web3 JS/Ethers JS</li>
+                <li><i class="fas fa-angle-right"></i> Javascript</li>
+                <li><i class="fas fa-angle-right"></i> Typescript</li>
+                <li><i class="fas fa-angle-right"></i> MongoDB</li>
+                <li><i class="fas fa-angle-right"></i> Mongoose</li>
+                <li><i class="fas fa-angle-right"></i> Express JS</li>
+                <li><i class="fas fa-angle-right"></i> Reactjs(Redux/Hooks)</li>
+                <li><i class="fas fa-angle-right"></i> Node JS</li>
+                <li><i class="fas fa-angle-right"></i> Nest JS</li>
+                <li><i class="fas fa-angle-right"></i> RabbitMQ</li>
+                <li><i class="fas fa-angle-right"></i> gRPC </li> <li><i class="fas fa-angle-right"></i> Solidity</li>
+                <li><i class="fas fa-angle-right"></i> Web3 JS/Ethers JS</li>
+                <li><i class="fas fa-angle-right"></i> Javascript</li>
+                <li><i class="fas fa-angle-right"></i> Typescript</li>
+                <li><i class="fas fa-angle-right"></i> MongoDB</li>
+                <li><i class="fas fa-angle-right"></i> Mongoose</li>
+                <li><i class="fas fa-angle-right"></i> Express JS</li>
+                <li><i class="fas fa-angle-right"></i> Reactjs(Redux/Hooks)</li>
+                <li><i class="fas fa-angle-right"></i> Node JS</li>
+                <li><i class="fas fa-angle-right"></i> Nest JS</li>
+                <li><i class="fas fa-angle-right"></i> RabbitMQ</li>
+                <li><i class="fas fa-angle-right"></i> gRPC </li> <li><i class="fas fa-angle-right"></i> Solidity</li>
+                <li><i class="fas fa-angle-right"></i> Web3 JS/Ethers JS</li>
+                <li><i class="fas fa-angle-right"></i> Javascript</li>
+                <li><i class="fas fa-angle-right"></i> Typescript</li>
+                <li><i class="fas fa-angle-right"></i> MongoDB</li>
+                <li><i class="fas fa-angle-right"></i> Mongoose</li>
+                <li><i class="fas fa-angle-right"></i> Express JS</li>
+                <li><i class="fas fa-angle-right"></i> Reactjs(Redux/Hooks)</li>
+                <li><i class="fas fa-angle-right"></i> Node JS</li>
+                <li><i class="fas fa-angle-right"></i> Nest JS</li>
+                <li><i class="fas fa-angle-right"></i> RabbitMQ</li>
+                <li><i class="fas fa-angle-right"></i> gRPC </li>
               </ul>
               <ul>
                 <p class="small grey my-1 text-left">
